<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_attraction_detail_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_detail_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/black_eagle_palace" />

        <TextView
            android:id="@+id/text_attraction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="@dimen/padding_12dp"
            android:textSize="@dimen/title_detail_size"
            android:textStyle="bold"
            tools:text="@string/landmark_black_eagle_name" />

        <TextView
            android:id="@+id/text_attraction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_12dp"
            android:paddingRight="@dimen/padding_12dp"
            android:textSize="@dimen/description_detail_size"
            android:textStyle="normal"
            tools:text="@string/landmark_black_eagle_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_8dp">

            <ImageView
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/width_24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_place" />

            <TextView
                android:id="@+id/text_attraction_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/padding_8dp"
                android:paddingRight="@dimen/padding_12dp"
                android:textColorLink="@color/primary_dark_color"
                android:textIsSelectable="true"
                android:textSize="@dimen/description_detail_size"
                android:textStyle="italic"
                tools:text="@string/landmark_black_eagle_address" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_attraction_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_8dp">

            <ImageView
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/width_24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_call" />

            <TextView
                android:id="@+id/text_attraction_telephone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autoLink="phone"
                android:paddingLeft="@dimen/padding_8dp"
                android:paddingRight="@dimen/padding_12dp"
                android:textSize="@dimen/description_detail_size"
                tools:text="@string/landmark_black_eagle_telephone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_attraction_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_8dp">

            <ImageView
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/width_24dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_open_in_browser" />

            <TextView
                android:id="@+id/text_attraction_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autoLink="web"
                android:paddingLeft="@dimen/padding_8dp"
                android:paddingRight="@dimen/padding_12dp"
                android:textSize="@dimen/description_detail_size"
                android:textStyle="normal"
                tools:text="@string/landmark_black_eagle_website" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>